[package]
name = "cch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
command-fds = "0.2.2"
home = "0.5.5"
inotify = { version = "0.10.2", default-features = false }
libc = "0.2.149"
nix = { version = "0.27.1", features = ["user", "fs"] }
rustache = "0.1.0"
rustix = { version = "0.38.20", features = ["net", "pipe"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
